--- a/airMonitor/templates/airMonitor/sensor_BME.html
+++ b/airMonitor/templates/airMonitor/sensor_BME.html
@@ -17,7 +17,7 @@
 }
 </style>
 
-<h1 name="SDSdetailsPage"></h1>
+<h1 name="BMEdetailsPage"></h1>
 <!-- Container 1: Sensor location and information -->
 <div class="container"> 
 	<!-- Row 1: sensor information (table) -->
