--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -9,12 +9,13 @@
     <title> {% block title %} {% endblock %} </title>
 
     <!-- favicon icon -->
+    <!-- logo from Air Aberdeen: https://www.airaberdeen.org/  -->
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon1.ico' %}">
 	
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- css and js links -->
+    <!-- css link -->
     <link rel="stylesheet" type="text/css" href="/static/map.css">
     
     <!-- Latest compiled JavaScript -->
@@ -25,53 +26,50 @@
 
     <!-- For displaying map -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
-	<link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
+	<link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet'/>
 
 </head>
+
 <body class="d-flex flex-column min-vh-100" >    
     <!-- navigation bar -->
     <nav class="navbar navbar-expand-sm mb-3 bg-dark navbar-dark">
         <div class="container p-2">
 
-            <!-- logo -->
-	    <div class="logo">
+        <!-- logo -->
+	    <div class="logo me-5">
             <a class="navbar-brand" href="/"> 
-                <!-- if an image for logo -->
-                <img src="https://www.airaberdeen.org/wp-content/uploads/2020/07/cropped-hex-wind-header-2.png" alt="Logo" style="width:150px;" class="rounded-pill">
+                <!-- logo from Air Aberdeen: https://www.airaberdeen.org/wp-content/uploads/2020/07/cropped-hex-wind-header-2.png -->
+                <img src="/static/airaberdeenlogo.png" alt="Logo" style="width: 150px;" class="rounded-pill">
             </a> 
-            </div>
-		
-            <!-- collapsible navigation bar for links -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#links" style="border-color: white;">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <!-- links and others -->
-            <div class="collapse navbar-collapse justify-content-center" id="links" id="more">
-                <ul class="navbar-nav nav-fill w-75">
-
-                    <!-- links -->
-                    <li class="nav-item">
-                        <a class="nav-link text-white links" href="/map" name="homeLink"> Map </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white links" href="/sensorListPage" name="listLink"> Sensor List </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white links" href="/comparisons" name="comparisonLink"> Comparisons </a>
-                    </li>
-                </ul>
-            </div>
         </div>
+		
+        <!-- collapsible navigation bar for links -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#links">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            
+        <!-- links and others -->
+        <div class="collapse navbar-collapse justify-content-center" id="links" id="more">
+            <ul class="navbar-nav nav-fill w-100">
+
+                <!-- links: map, sensor list, conparisons -->
+                <li class="nav-item">
+                    <a class="nav-link text-white links" href="/map" name="homeLink"> Map </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white links" href="/sensorListPage" name="listLink"> Sensor List </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white links" href="/comparisons" name="comparisonLink"> Comparisons </a>
+                </li>
+            </ul>
+        </div>
+        
     </nav>
 
     <!-- container(s) --> 
     {% block content %}
     {% endblock %} 
-
-    
-
-<!-- <script type="text/javascript" src="static/map.js"></script> -->
 
 </body>
 
