--- a/airMonitor/templates/airMonitor/comparisons.html
+++ b/airMonitor/templates/airMonitor/comparisons.html
@@ -13,24 +13,14 @@
 		<h1> Comparing Sensors </h1>
 	</div>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script>
-		$(document).ready(function(){
-			$("#sType").on('change',function(){
-				$(".compare").hide();
-				$("#" + $(this).val()).fadeIn(200);
-			}).change();
-		});
-	</script>
-
 	<!-- Row 2: Type Selection -->
 	<div class="row my-3">
 		<form action="" method="POST">
 			{% csrf_token %}
 			<!-- Row 1: Type Selection  -->
-			<div class="row align-self-center">
+			<div class="row ">
 				<!-- Column 1: Type Selection -->
-				<div class="col-md-4 align-self-center">
+				<div class="col-md-12 col-sm-12 col-xs-12" style="text-align: center;">
 					<label for="sensor1"> Choose a type of sensor: </label>
 					<select name="sType" id="sType">
 						<option value="x"> Type... </option>
@@ -43,19 +33,62 @@
 		</form>
 	</div> 
 
-	<!-- Row 3(1): sensor selection statement  -->
+	<!-- when selecting a sensor type -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script>
+		$(document).ready(function(){
+			$("#sType").on('change',function(){
+				$(".compare").hide();
+				$("#" + $(this).val()).fadeIn(200);
+			}).change();
+		});
+	</script>
+
+	<!-- Row 3: sensor selection statement  -->
 	<div class="row compare" id="x">
 		<form action="" method="POST">
 			{% csrf_token %}
-				<h2> Please select a sensor type! </h2>
+			<!-- <h2> Please select a sensor type! </h2> change to description of sensor type?? -->
+			<!-- sensor types and what they detect -->
+			<div class="row table-responsive">
+				<table class="table table-striped table-bordered table-hover align-middle">
+					<thead style="background-color: darkgreen; color: white;">
+						<tr>
+							<th> Sensor Type </th>
+							<th colspan="3"> Data Type </th>
+						</tr>
+					</thead>
+					<tbody> 
+						<tr style="text-align: center;">
+							<td> SDS011 </td> 
+							<td> P1 </td>
+							<td> P2 </td>
+							<td>   </td>
+						</tr>
+						<tr>
+							<td> BME280 </td>
+							<td> Temperature </td>
+							<td> Humidity </td> 
+							<td> Pressure </td>
+						</tr>
+						<tr>
+							<td> DHT22 </td>
+							<td> Temperature </td>
+							<td> Humidity </td>
+							<td>   </td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</form>
 	</div>
 
-	<!-- Row 3(2): sensor selection 1 SDS011 -->
+	<!-- Part 1: sensor selection 1 SDS011 -->
 	<div class="row compare" id="SDS011">
 		<form action="" method="POST">
 			{% csrf_token %}
 			<div class="row">
+
 				<!-- Column 1: sensor 1 -->
 				<div class="col-md-4 align-self-center">
 					<label for="sensor1"> Choose first sensor: </label>
@@ -65,26 +98,27 @@
 						{% endfor %}
 					</select>
 				</div>
+
 				<!-- Column 2: sensor 2 -->
 				<div class="col-md-4 align-self-center">
 					<!-- <h2> Select sensor 2 </h2> -->
-					<label for="sensor2">Choose second sensor:</label>
+					<label for="sensor2"> Choose second sensor:</label>
 					<select name="sensor2" id="sensor2">
 						{% for s in SDSsensors %}
 						<option value={{s.sensorID}}> {{s.sensorID}} </option>
 						{% endfor %}
 					</select>
 				</div>
+
 				<!-- Column 3: comparison button -->
 				<div class="col text-center align-self-center">
 					<button type="submit" class="btn btn-success my-1"> Compare </button>
-					<!-- <input type="submit" value="Submit"> -->
 				</div>
 			</div>
 		</form>
 	</div>
 
-	<!-- Row 3(3): sensor selection 2 BME280 -->
+	<!-- Part 2: sensor selection 2 BME280 -->
 	<div class="compare" id="BME280">
 		<form action="" method="POST">
 			{% csrf_token %}
@@ -98,29 +132,31 @@
 						{% endfor %}
 					</select>
 				</div>
+
 				<!-- Column 2: sensor 2 -->
 				<div class="col-md-4 align-self-center">
-					<label for="sensor2">Choose second sensor:</label>
+					<label for="sensor2"> Choose second sensor:</label>
 					<select name="sensor2" id="sensor2">
 						{% for s in BMEsensors %}
 						<option value={{s.sensorID}}> {{s.sensorID}} </option>
 						{% endfor %}
 					</select>
 				</div>
+
 				<!-- Column 3: compa button -->
 				<div class="col text-center align-self-center">
 					<button type="submit" class="btn btn-success my-1"> Compare </button>
-					<!-- <input type="submit" value="Submit"> -->
 				</div>
 			</div>
 		</form>
 	</div>
 
-	<!-- Row 3(4): sensor selection 3 DHT22 -->
+	<!-- Part 3: sensor selection 3 DHT22 -->
 	<div class="row compare" id="DHT22">
 		<form action="" method="POST">
 			{% csrf_token %}
 			<div class="row">
+
 				<!-- Column 1: sensor 1 -->
 				<div class="col-md-4 align-self-center">
 					<label for="sensor1"> Choose first sensor: </label>
@@ -130,100 +166,105 @@
 						{% endfor %}
 					</select>
 				</div>
+
 				<!-- Column 2: sensor 2 -->
 				<div class="col-md-4 align-self-center">
-					<label for="sensor2">Choose second sensor:</label>
+					<label for="sensor2"> Choose second sensor:</label>
 					<select name="sensor2" id="sensor2">
 						{% for s in DHTsensors %}
 						<option value={{s.sensorID}}> {{s.sensorID}} </option>
 						{% endfor %}
 					</select>
 				</div>
+
 				<!-- Column 3: comparison button -->
 				<div class="col text-center align-self-center">
 					<button type="submit" class="btn btn-success my-1"> Compare </button>
-					<!-- <input type="submit" value="Submit"> -->
 				</div>
 			</div>
 		</form>
 	</div>
 </div>
-	
 
 <!-- Container 2: Sensor location and information --> 
 <div class="container my-3">
 	<div class="row table-responsive"> 
+
+		{% if sList1 %}
 		<!-- Column 1: sensor 1 (table) -->
 		<div class="col-md-6 col-xs-6 col-sm-6 mr-1 table-responsive"> 
-			{% if sList1 %}
-			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-				<caption style="text-align: center; color: red;"> <b> Sensor 1 </b> </caption>
-				<thead style="background-color: darkgreen; color: white;">
+			<caption style="text-align: center;"> <b style="color: red;"> Sensor 1 </b> </caption>
+			<table class="table table-striped table-bordered table-hover align-middle">
+				<thead class="align-middle" style="background-color: darkgreen; color: white;">
 					<tr>
-						<th>ID</th>
-						<th>Location ID</th>
-						<th>Location</th>
-						<th>Details...</th>
+						<th> ID </th>
+						<th> Location ID </th>
+						<th> Location </th>
+						<th> Details </th>
 					</tr>
 				</thead>
-				<tr>
-					<td>{{sList1.sensorID}}</th>
-					<td>{{sList1.location_id}}</th>
-					<td class="col d-flex align-items-center justify-content-center"> 
-						<div id='map' style='width: 200px; height: 200px;' >
-							<script>
-								mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
-								var map = new mapboxgl.Map({
-									container: 'map',
-									style: 'mapbox://styles/mapbox/streets-v11',
-									center: [{{sList1.longitude}}, {{sList1.latitude}}],
-									zoom: 10,
-								});
-								var idList = {{idList}};
-								var longitudeList = {{longList}};
-								var latitudeList = {{latList}};
-								var listLength = {{lLength}};
-								var idArray = JSON.parse("[" + idList + "]");
-								var longArray = JSON.parse("[" + longitudeList + "]");
-								var latArray = JSON.parse("[" + latitudeList + "]");
-								for (let r=0; r<listLength; r++){								
-									finalHTML = ""+{{sList1.longitude}}+","+{{sList1.latitude}}+""
-									popup = new mapboxgl.Popup({ offset: 25 })
-									.setHTML(finalHTML);
-									marker = new mapboxgl.Marker()
-									.setLngLat([longArray[r],latArray[r]])
-									.setPopup(popup)
-									.addTo(map);
-								}
-							</script>	
-						</div>
-					</td>
-					<td>
-						<form method="POST" action="/sensor/">
-							{% csrf_token %}
-							<button class="selectButton btn btn-success" id="Selection" name="Selection" value={{ sList1.sensorID }} >More Details</button>
-						</form>
-					</td>	
-				</tr>
+				<tbody>
+					<tr>
+						<td>{{sList1.sensorID}}</th>
+						<td>{{sList1.location_id}}</th>
+						<td class="col d-flex align-items-center justify-content-center"> 
+							<!-- inserting map -->
+							<div id='map' style='width: 200px; height: 200px;' >
+								<script>
+									mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
+									var map = new mapboxgl.Map({
+										container: 'map',
+										style: 'mapbox://styles/mapbox/streets-v11',
+										center: [{{sList1.longitude}}, {{sList1.latitude}}],
+										zoom: 10,
+									});
+									var idList = {{idList}};
+									var longitudeList = {{longList}};
+									var latitudeList = {{latList}};
+									var listLength = {{lLength}};
+									var idArray = JSON.parse("[" + idList + "]");
+									var longArray = JSON.parse("[" + longitudeList + "]");
+									var latArray = JSON.parse("[" + latitudeList + "]");
+									for (let r=0; r<listLength; r++){								
+										finalHTML = ""+{{sList1.longitude}}+","+{{sList1.latitude}}+""
+										popup = new mapboxgl.Popup({ offset: 25 })
+										.setHTML(finalHTML);
+										marker = new mapboxgl.Marker()
+										.setLngLat([longArray[r],latArray[r]])
+										.setPopup(popup)
+										.addTo(map);
+									}
+								</script>	
+							</div>
+						</td>
+						<td>
+							<form method="POST" action="/sensor/">
+								{% csrf_token %}
+								<button class="selectButton btn btn-success" id="Selection" name="Selection" value={{ sList1.sensorID }}> More Details</button>
+							</form>
+						</td>	
+					</tr>
+				</tbody>
 			</table>
 		</div>
 
 		<!-- Column 2: sensor 2 (table) -->
 		<div class="col-md-6 col-xs-6 col-sm-6 mr-2 table-responsive"> 
-			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-				<caption style="text-align:center; color: blue;"> <b>Sensor 2 </b> </caption>
-				<thead style="background-color: darkgreen; color: white;">
-					<tr>
-						<th>ID</th>
-						<th>Location ID</th>
-						<th>Location</th>
-						<th>Details...</th>
+			<caption style="text-align:center;"> <b style="color: blue;"> Sensor 2 </b> </caption>
+			<table class="table table-striped table-bordered table-hover caption-top align-middle">
+				<thead>
+					<tr class="align-middle" style="background-color: darkgreen; color: white;">
+						<th> ID </th>
+						<th> Location ID </th>
+						<th> Location </th>
+						<th> Details </th>
 					</tr>
 				</thead>
 				<tr>
 					<td>{{sList2.sensorID}}</th>
 					<td>{{sList2.location_id}}</th>
 					<td <td class="col d-flex align-items-center justify-content-center"> 
+						<!-- inserting map -->
 						<div id='map2' style='width: 200px; height: 200px; '>
 							<script>
 								mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
@@ -260,10 +301,13 @@
 					</td>	
 				</tr>
 			</table>
-		{% else %}
-			<h2> Submit two sensors to see comparisons </h2>
-		{% endif %}
 		</div>
+		
+		{% else %}
+		<div class="row" style="text-align: center;">
+			<h2> Submit two sensors to see comparisons </h2>
+		</div>
+		{% endif %}
 		
 	</div>
 </div>
@@ -283,8 +327,10 @@
 		<canvas id="line-chart2"></canvas>
 	</div>
 
+	<!-- for displying charts -->
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-	<script>
+	<script> 
+		// Chart 1: P1 
 		var config = {
 			type: 'line',
 			data: {
@@ -333,6 +379,8 @@
     		}
 		}
 		};
+
+		// Chart 2: P2
 		var config2 = {
 			type: 'line',
 			data: {
@@ -380,7 +428,8 @@
         		backgroundColor: 'rgba(255, 255, 255, 0.5)'
     		}
 		}
-		};
+		}; 
+
 		Chart.pluginService.register({
     	    beforeDraw: function (chart, easing) {
     	        if (chart.config.options.chartArea && chart.config.options.chartArea.backgroundColor) {
@@ -393,6 +442,7 @@
     	        }
     	    }
     	});
+
 		window.onload = function() {
 			var ctx = document.getElementById('line-chart').getContext('2d');
 			window.myLine = new Chart(ctx, config);
@@ -416,8 +466,10 @@
 		<canvas id="line-chart3"></canvas>
 	</div>
 
+	<!-- for displying charts -->
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 	<script>
+		// Chart 1: temperature
 		var config1 = {
 			type: 'line',
 			data: {
@@ -463,7 +515,9 @@
         		backgroundColor: 'rgba(255, 255, 255, 0.5)'
     		}
 		}
-		};
+		}; 
+
+		// Chart 2: humidity
 		var config2 = {
 			type: 'line',
 			data: {
@@ -510,6 +564,8 @@
     		}
 		}
 		};
+
+		// Chart 3: pressure
 		var config3 = {
 			type: 'line',
 			data: {
@@ -555,7 +611,8 @@
         		backgroundColor: 'rgba(255, 255, 255, 0.5)'
     		}
 		}
-		};
+		}; 
+
 		Chart.pluginService.register({
     	    beforeDraw: function (chart, easing) {
     	        if (chart.config.options.chartArea && chart.config.options.chartArea.backgroundColor) {
@@ -568,6 +625,7 @@
     	        }
     	    }
     	});
+
 		window.onload = function() {
 			var ctx1 = document.getElementById('line-chart1').getContext('2d');
 			window.myLine1 = new Chart(ctx1, config1);	
@@ -589,8 +647,10 @@
 		<canvas id="line-chart2"></canvas>
 	</div>
 
+	<!-- for displaying charts -->
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 	<script>
+		// Chart 1: temperature
 		var config1 = {
 			type: 'line',
 			data: {
@@ -637,6 +697,8 @@
     		}
 		}
 		};
+
+		// Chart 2: humidity 
 		var config2 = {
 			type: 'line',
 			data: {
@@ -683,6 +745,7 @@
     		}
 		}
 		};
+
 		Chart.pluginService.register({
     	    beforeDraw: function (chart, easing) {
     	        if (chart.config.options.chartArea && chart.config.options.chartArea.backgroundColor) {
@@ -695,6 +758,7 @@
     	        }
     	    }
     	});
+
 		window.onload = function() {
 			var ctx1 = document.getElementById('line-chart1').getContext('2d');
 			window.myLine1 = new Chart(ctx1, config1);	
@@ -702,11 +766,11 @@
 			window.myLine2 = new Chart(ctx2, config2);	
 		};
 	</script>
+
 	{% else %}
 	<h1 style="margin:0 auto; text-align: center"> No comparison made </h1>
 	{% endif %}
 
 </div>
-
 
 {% endblock %}
