--- a/airMonitor/templates/airMonitor/landing.html
+++ b/airMonitor/templates/airMonitor/landing.html
@@ -10,7 +10,6 @@
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/static/landing.css">
-
 </head>
 
 <body>
@@ -19,24 +18,24 @@
     <div class="container-fluid">
         <div class='clouds'>
             <div class='clouds-1'></div>
-            <div class='clouds-2'></div>
             <div class='clouds-3'></div>
         </div>
     </div>
 
+    <!-- Container 2: greeting -->
     <div class="container" id="greeting"> 
         <div class="row mx-1 justify-content-center text-center"> 
             <p> Welcome </p>
         </div>
     </div>
 
-    <!-- Container 2: introdution -->
+    <!-- Container 3: introdution -->
     <div class="container justify-content-center col-container">
-        <div class="row"> 
+        <div class="row w-100"> 
             <div class="col-md-12 col-xs-12 col-sm-12 justify-content-center" id="div_row_intro">
                 <h1 style="text-align: center;"> Introduction </h1> 
-                <p style="text-align:center; font-size: 20px;"> 
-                    The purpose of the websites is to help users have access to live and historical data of air quality monitoring sensors in Aberdeen. 
+                <p style="text-align: center" class="p_font"> 
+                    The purpose of the websites is to help users have access to live and historical data of air quality monitoring sensors in Aberdeen. <br>
                     The functionalities include: <br>
                     - Access to various sensors location on a map <br>     
                     - Access to individual sensor details <br> 
@@ -48,16 +47,17 @@
     </div>
 
 
-    <!-- Container 3: links -->
+    <!-- Container 4: links - map, sensor list, comparisons -->
     <div class="container my-3 justify-content-center col-container">
-        <div class="row">  
+        <div class="row w-100"> 
+
             <!-- Column 1: map -->
-            
             <div class="col-md-4 col-xs-4 col-sm-4 my-2 me-2 cols div_row_links grow color">
                 <a class="nav-link text-dark" href="map/" name="homeLink">
                     <h1 style="text-align: center;"> Map </h1> 
-                    <p class="p_font" style="font-size: 20px;"> The page displays a map showing the location of each air monitoring sensor in Aberdeen. 
-                        <strong style="color: red;"> Click </strong> to access the map page. 
+                    <p class="p_font"> 
+                        The page displays a map showing the location of each air monitoring sensor in Aberdeen. 
+                        <strong style="color: blue;"> Click </strong> to access the map page. 
                     </p>
                 </a>
             </div> 
@@ -67,8 +67,9 @@
             <div class="col-md-4 col-xs-4 col-sm-4 my-2 me-2 cols div_row_links grow color">
                 <a class="nav-link text-dark" href="/sensorListPage" name="listLink">
                     <h1 style="text-align: center;"> Sensor List </h1>
-                    <p class="p_font" style="font-size: 20px;"> The page shows a list of all air monitoring sensors with their details.
-                        <strong style="color: red;"> Click </strong> to visit the sensor list page.
+                    <p class="p_font"> 
+                        The page shows a list of all air monitoring sensors with their details.
+                        <strong style="color: blue;"> Click </strong> to visit the sensor list page.
                     </p>
                 </a>
             </div> 
@@ -77,11 +78,13 @@
             <div class="col-md-4 col-xs-4 col-sm-4 my-2 cols div_row_links grow color">
                 <a class="nav-link text-dark" href="/comparisons" name="comparisonLink">
                     <h1 style="text-align: center;"> Comparisons </h1>
-                    <p class="p_font" style="font-size: 20px;"> Compare and analyse historical data in data charts of different sensors. 
-                        <strong style="color: red;"> Click </strong> to go to the comparisons page.
+                    <p class="p_font"> 
+                        Compare and analyse historical data in data charts of different sensors. 
+                        <strong style="color: blue;"> Click </strong> to go to the comparisons page.
                     </p>
                 </a>
             </div> 
+            
         </div>
     </div>
     
