--- a/airMonitor/templates/airMonitor/sensorListPage.html
+++ b/airMonitor/templates/airMonitor/sensorListPage.html
@@ -3,23 +3,24 @@
 {% block title %} Sensor List {% endblock %}
 
 {% block content %}
+
 <h1 name="listPage"></h1>
 
 <!-- Container 1: search bar -->
 <div class="container my-3">
 	<div class="row">
 		<!-- search bar -->
-		<form action="/sensorListPage/" method="POST" class="form-inline align-middle"> 
+		<form action="/sensorListPage/" method="POST" class="form-inline align-middle mx-auto w-auto"> 
 			{% csrf_token %}
 			<div class="row"> 
 
 				<!-- text -->
-				<div class="col-md-2 col-form-label">
+				<div class="col-md-4 col-sm-4 col-xs-4 col-form-label">
 					<label> Search for a sensor by its: </label>
 				</div>
 
 				<!-- search selection: radios -->
-				<div class="col-md-4 col-form-label text-center"> 
+				<div class="col-md-5 col-sm-5 col-xs-5 col-form-label text-center"> 
 					<input type="radio" id="sensorID" name="searchType" value="sensorID" checked>
 					<label for="sensorID" class="form-check-label"> SensorID </label>
 
@@ -31,9 +32,11 @@
 				</div>
 
 				<!-- input -->
-				<div class="col align-self-center">
-					<input type="text" name="criteria" placeholder="Enter search..." style="width: 50%;">
+				<div class="col-md-3 col-sm-3 col-xs-3 align-self-center">
+					<!-- if enter character, error occurs -->
+					<input type="text" name="criteria" placeholder="Enter search..." style="width: 90%;">
 				</div>
+
 			</div>
 		</form>
 	</div>
@@ -43,10 +46,10 @@
 <div class="container my-3">
 	<div class="row">
 		<div class="col table-responsive"> 
-			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-				<caption style="text-align:center; color: black;"> All Sensors </caption>
-				<thead style="background-color: darkgreen; color: white;">
-					<tr>
+			<table class="table table-striped table-bordered table-hover caption-top align-middle">
+				<caption style="text-align:center; color: black;"> <h2> All Sensors </h2> </caption>
+				<thead>
+					<tr style="background-color: darkgreen; color: white;">
 						<th> Sensor ID </th>
 						<th> Longitude </th>
 						<th> Latitude </th>
