--- a/airMonitor/templates/airMonitor/sensor_DHT.html
+++ b/airMonitor/templates/airMonitor/sensor_DHT.html
@@ -2,28 +2,32 @@
 
 {% block title %} DHT22 Sensor {% endblock %}
 
-{% block content %}
-<style>
-.arrow {
-  border: solid black;
-  border-width: 0 8px 8px 0;
-  display: inline-block;
-  padding: 5px;
-}
+{% block content %} 
 
-.angle {
-  transform: rotate({{windAngle}}deg);
-  -webkit-transform: rotate({{windAngle}}deg);
-}
+<!-- for displaying wind direction -->
+<style>
+	.arrow {
+	border: solid black;
+	border-width: 0 8px 8px 0;
+	display: inline-block;
+	padding: 5px;
+	}
+
+	.angle {
+	transform: rotate({{windAngle}}deg);
+	-webkit-transform: rotate({{windAngle}}deg);
+	}
 </style>
 
 <h1 name="DHTdetailsPage"></h1>
+
 <!-- Container 1: Sensor location and information -->
+
 <div class="container"> 
 	<!-- Row 1: sensor information (table) -->
 	<div class="row table-responsive"> 
-		<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-			<caption style="text-align:center; color: black;"> <h1> Sensor Information </h1> </caption>
+		<caption style="text-align:center; color: black;"> <h1> Sensor Information </h1> </caption>
+		<table class="table table-striped table-bordered table-hover align-middle">
 			<thead class="align-middle" style="background-color: darkgreen; color: white;">
 				<tr>
 					<th> Sensor ID </th>
@@ -48,6 +52,7 @@
 				<tr>
 					<th> Map Location: </th>
 					<td class="col d-flex align-items-center justify-content-center">
+						<!-- inserting map -->
 						<div id='map' style='width: 200px; height: 200px; '>
 							<script>
 								mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
@@ -78,83 +83,97 @@
 					</td>
 				</tr>
 			</thead>
-		</table>
-		<!-- Row 2: data/charts selection (drop-down list) -->
-		<div class="row mb-3">
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-			<script>
-				$(document).ready(function(){
-					$("#sType").on('change',function(){
-						$(".display").hide();
-						$("#" + $(this).val()).fadeIn(200);
-					}).change();
-				});
-			</script>
-
-			<select name="sType" id="sType">
-				<option value="Live"> Live Data </option>
-				<option value="Archive"> Past Data </option>
-				<option value="Charts"> Data Charts </option>
-			</select>
-		</div>
+		</table> 
 	</div>
+
+	<!-- Row 2: data/charts selection (drop-down list) -->
+	<div class="row mb-3">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script>
+			$(document).ready(function(){
+				$("#sType").on('change',function(){
+					$(".display").hide();
+					$("#" + $(this).val()).fadeIn(200);
+				}).change();
+			});
+		</script>
+
+		<select name="sType" id="sType">
+			<option value="Live"> Live Data </option>
+			<option value="Archive"> Past Data </option>
+			<option value="Charts"> Data Charts </option>
+		</select>
+	</div>
+
 </div>
 
 <!-- Container 2: Data or Charts --> 
-<!-- Container 2 (1): Live Data --> 
+
+<!-- Part 1: Live Data --> 
 <div class="container my-3 display" id="Live">
-	<div class="row">
-		<div class="col table-responsive"> 
-			<caption style="text-align:center; color: black;"> <h1>Current Weather</h1></caption>
-			<table style="text-align: center;">
-				<tr style="text-align: center;">
+
+	<!-- div 1: table for weather and its icon -->
+	<div class="row table-responsive">
+		<caption style="text-align:center; color: black;"> <h1> Current Weather </h1></caption>
+		<!-- centring the table horizontally -->
+		<table class="mx-auto w-auto"> 
+			<tr style="text-align: center;">
 					<td rowspan="3"> {{currentWeather}} </td> 
 					<td rowspan="3"><img src={{weatherImage}} alt="Logo" style="width:150px;"></td>
 					<td width="250px"> Wind Speed: {{windSpeed}}kph </td>
 					<td width="250px"> Precipitation:{{precipitation}}mm</td>
+			</tr>
+			<tr> 
+				<td><p><i class="arrow angle"></i></p> </td>
+			</tr>
+			<tr> 
+				<td>Wind Direction: {{windDirection}} </td>
+			</tr>
+		</table> 
+	</div>
+
+	<!-- div 2: table for weather data -->
+	<div class="row table-responsive">
+		<table class="table table-striped table-bordered table-hover align-middle">
+			<thead style="background-color: darkgreen; color: white;">		
+				<tr>
+					<th> Timestamp </th>
+					<th> Humidity </th>
+					<th> Temperature </th>
 				</tr>
-				<tr> 
-					<td><p><i class="arrow angle"></i></p> </td>
+			</thead>
+			<tbody> 
+				<tr style="text-align: center;">
+					<td> {{liveTimestamp}} </td>
+					<td> {{liveHumi}} 	</td>
+					<td> {{liveTemp}}	</td> 
 				</tr>
-				<tr> 
-					<td>Wind Direction: {{windDirection}} </td>
-				</tr>
-			</table>			
-			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-				<thead style="background-color: darkgreen; color: white;">
-					<tr>
-						<th> Timestamp </th>
-						<th> Humidity </th>
-						<th> Temperature </th>
-					</tr>
-				</thead>
-				<tbody> 
-					<tr style="text-align: center;">
-						<td> {{liveTimestamp}} </td>
-						<td> {{liveHumi}} 	</td>
-						<td> {{liveTemp}}	</td> 
-					</tr>
-				</tbody>
-			</table>
-		</div>
+			</tbody>
+		</table>
 	</div>
 </div>
 
 
-<!-- Container 2(2): past data -->
+<!-- Part 2: past data -->
 <div class="container my-3 display" id="Archive">
-	<div class="tab">
-			{% for date in historyRange %} 
-			<button class="tablinks" onclick="openDate(event, '{{date.0}}')" id="defaultOpen">{{date.0}}</button>
-			{% endfor %}
-			<button class="tablinks" onclick="openDate(event, 'Past')">Past Data</button>
 
+	<!-- tabs for historical data -->
+	<div class="tab">
+		<!-- tabs for past data of seven (7) days -->
+		{% for date in historyRange %} 
+		<button class="tablinks" onclick="openDate(event, '{{date.0}}')" id="defaultOpen">{{date.0}}</button>
+		{% endfor %}
+		<!-- tab for past data (average) -->
+		<button class="tablinks" onclick="openDate(event, 'Past')">Past Data</button>
 	</div>
 	
+	<br>
+
+	<!-- past data (datail) when clicking the tabs for a specific date --> 
 	{% for x in historyRange %} 
 	<div id='{{x.0}}' class="tabcontent">
-		<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-			<caption style="text-align:center; color: black;"> <h1>Sensor Data Table </h1> </caption>
+		<caption style="text-align:center; color: black;"> <h1> Sensor Data Table </h1> </caption>
+		<table class="table table-striped table-bordered table-hover align-middle">
 			<thead style="background-color: darkgreen; color: white;">
 				<tr>
 					<th> Timestamp </th>
@@ -176,9 +195,11 @@
 		</table>
 	</div>
 	{% endfor %}
+
+	<!-- past data (average) when clicking the tab "Past Data" -->
 	<div id='Past' class="tabcontent">
-		<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-			<caption style="text-align:center; color: black;"> <h1>Sensor Data Table </h1> </caption>
+		<caption style="text-align:center; color: black;"> <h1> Sensor Data Table </h1> </caption>
+		<table class="table table-striped table-bordered table-hover align-middle">
 			<thead style="background-color: darkgreen; color: white;">
 				<tr>
 					<th> Past Date </th>
@@ -197,61 +218,42 @@
 			</tbody>
 		</table>
 	</div>
-<script>
-	function openDate(evt, cityName) {
-	  var i, tabcontent, tablinks;
-	  tabcontent = document.getElementsByClassName("tabcontent");
-	  for (i = 0; i < tabcontent.length; i++) {
-	    tabcontent[i].style.display = "none";
-	  }
-	  tablinks = document.getElementsByClassName("tablinks");
-	  for (i = 0; i < tablinks.length; i++) {
-	    tablinks[i].className = tablinks[i].className.replace(" active", "");
-	  }
-	  document.getElementById(cityName).style.display = "block";
-	  evt.currentTarget.className += " active";
-	}
 
-	// Get the element with id="defaultOpen" and click on it
-	document.getElementById("defaultOpen").click();
-</script>
+	<!-- when clicking the tabs -->
+	<script>
+		function openDate(evt, cityName) {
+		var i, tabcontent, tablinks;
+		tabcontent = document.getElementsByClassName("tabcontent");
+		for (i = 0; i < tabcontent.length; i++) {
+			tabcontent[i].style.display = "none";
+		}
+		tablinks = document.getElementsByClassName("tablinks");
+		for (i = 0; i < tablinks.length; i++) {
+			tablinks[i].className = tablinks[i].className.replace(" active", "");
+		}
+		document.getElementById(cityName).style.display = "block";
+		evt.currentTarget.className += " active";
+		}
+
+		// Get the element with id="defaultOpen" and click on it
+		document.getElementById("defaultOpen").click();
+	</script>
+
+	<!-- tabs for historical data, if there is too much data, no need to go back to the top -->
 	<div class="tab">
+		<!-- tabs for past data of seven (7) days -->
 		{% for date in historyRange %} 
 		<button class="tablinks" onclick="openDate(event, '{{date.0}}')" id="defaultOpen">{{date.0}}</button>
 		{% endfor %}
+		<!-- tab for past data (average) -->
+		<button class="tablinks" onclick="openDate(event, 'Past')">Past Data</button>
 	</div>
-	<br>
+	
 </div>
 
-<!--
-<div class="container my-3 display" id="Archive">
-	<div class="row">
-		<div class="col table-responsive"> 
-			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-				<caption style="text-align:center; color: black;"> <h1> Sensor Data Table </h1> </caption>
-				<thead style="background-color: darkgreen; color: white;">
-					<tr>
-						<th> Timestamp </th>
-						<th> Humidity </th>
-						<th> Temperature </th>
-					</tr>
-				</thead>
-				<tbody> 
-					{% for sensor in results %} 
-					<tr style="text-align: center;">
-						<td> {{ sensor.timestamp }} </td> 
-						<td> {{ sensor.humidity }} </td>
-						<td> {{ sensor.temperature }} </td>
-					</tr>
-					{% endfor %}
-				</tbody>
-			</table>
-		</div>
-	</div>
-</div>
--->
 
-<!-- Container 2(3): Charts -->
+<!-- Part 3: Charts -->
+
 <div class="container my-3 display" id="Charts">
 	<!-- Chart 1: Temperature -->
 	<div class="row justify-content-center" id="container">
@@ -266,7 +268,8 @@
 </div>
 
 
-<!-- already put the link to base.html <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script> -->
+<!-- for displaying charts -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script> 
 <script>
 	// Chart 1: Temperature
 	var config1 = {
@@ -353,6 +356,7 @@
     		}
 		}
 	};
+
 	Chart.pluginService.register({
         beforeDraw: function (chart, easing) {
             if (chart.config.options.chartArea && chart.config.options.chartArea.backgroundColor) {
@@ -365,6 +369,7 @@
             }
         }
     });
+
 	window.onload = function() {
 		var ctx1 = document.getElementById('line-chart1').getContext('2d');
 		window.myLine1 = new Chart(ctx1, config1);	
