updating sensor list page

--- a/airMonitor/templates/airMonitor/FAQs.html
+++ b/airMonitor/templates/airMonitor/FAQs.html
@@ -11,7 +11,7 @@
 <div class="container-fluid bg-white">
 	<div class="row py-2">
 		<div class="col-lg-9 mx-auto text-white text-center">
-			 <h1 class="display-4 text-dark">FAQ</h1>
+			 <h1 class="display-4 text-dark"> FAQs </h1>
 		</div>
 	</div>
   <!-- accordion -->
