helpdropdown link and completion of FAQs page

--- a/airMonitor/templates/airMonitor/FAQs.html
+++ b/airMonitor/templates/airMonitor/FAQs.html
@@ -25,9 +25,10 @@
         <span class="span">Q. </span> What is the purpose of the website? 
       </button>
       </H6>
+      <!--accordion body -->
       <div id="collapseQ1" class="accordion-collapse collapse show" aria-labelledby="headingQ1" data-bs-parent="#accordion">
       <div class="accordion-body">
-            <P style="text-align:left">  The purpose of the websites is to help users access historical data of air quality monitoring sensors and analytics in the form of Data charts in Aberdeen to see trends.<br> The historical data is retrieved from an existing application which collects air monitoring sensor details. 
+            <P style="text-align:left">  The purpose of the website is to help users access historical data recorded by air-quality-monitoring sensors and view analytics displayed in the form of Data charts, that depict the air quality in and around the area of Aberdeen City. They will then be able to use this data to see trends related to the changes in air quality over time. The historical data is retrieved from an existing application which provides the details that we display.
 			</P>
 	  </div>
     </div>
@@ -39,6 +40,7 @@
         <span class="span">Q. </span>Which user group is this website of benefit to? 
       </button>
     </h6>
+    <!--accordion body -->
     <div id="collapseQ2" class="accordion-collapse collapse" aria-labelledby="headingQ2" data-bs-parent="#accordion">
       <div class="accordion-body">
        <P style="text-align:left">  
@@ -59,11 +61,12 @@
         <span class="span">Q. </span>Does the website require user sign up or provision of user details?  
       </button>
     </h2>
+    <!--accordion body -->
     <div id="collapseQ3" class="accordion-collapse collapse" aria-labelledby="headingQ3" data-bs-parent="#accordion">
       <div class="accordion-body">
 		  <P style="text-align:left">  
 			No <br>
-            The website does not require users to sign up or provide any user details
+      The website does not require users to sign up or provide any user details
 
 			</P>
       </div>
@@ -76,6 +79,7 @@
         <span class="span">Q. </span>What can I do on the website?  
       </button>
     </h6>
+    <!--accordion body -->
   <div id="collapseQ4" class="accordion-collapse collapse" aria-labelledby="headingQ4" data-bs-parent="#accordion">
       <div class="accordion-body">
 		    <P class="accordianbodyP">  The following are the main functionalities of the website
@@ -96,6 +100,7 @@
         <span class="span">Q. </span>What are the types of air monitoring Sensors?   
       </button>
     </h6>
+    <!--accordion body -->
   <div id="collapseQ5" class="accordion-collapse collapse" aria-labelledby="headingQ5" data-bs-parent="#accordion">
       <div class="accordion-body">
         <Strong> Types of sensors </Strong> 
@@ -120,11 +125,17 @@
   <div class="accordion-item">
     <h6 class="accordion-header" id="headingQ6">
       <button class="accordion-button collapsed text-dark text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#collapseQ6" aria-expanded="false" aria-controls="collapseQ6">
-        <span class="span">Q. </span>How do I compare different Sensor details?    
+        <span class="span">Q. </span>Are the sensors displayed located in Aberdeen city only?   
       </button>
     </h6>
+    <!--accordion body -->
   <div id="collapseQ6" class="accordion-collapse collapse" aria-labelledby="headingQ6" data-bs-parent="#accordion">
       <div class="accordion-body">
+        <p>
+          Yes <br>
+          Historical data displayed are from sensors located in only Aberdeen city.
+
+        </p>
       </div>
     </div>
   </div>
@@ -133,23 +144,37 @@
   <div class="accordion-item">
     <h6 class="accordion-header" id="headingQ8">
       <button class="accordion-button collapsed text-dark text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#collapseQ8" aria-expanded="false" aria-controls="collapseQ8">
-        <span class="span">Q. </span>Can I compare details of more the two Sensors at the same time?   
+        <span class="span">Q. </span>What is the Map page?   
       </button>
     </h6>
+    <!--accordion body -->
   <div id="collapseQ8" class="accordion-collapse collapse" aria-labelledby="headingQ8" data-bs-parent="#accordion">
       <div class="accordion-body">
       </div>
+      <p class="">
+        The map page displays a map with clickable pointers colored in blue showing the location of individual 
+        sensors on the map of Aberdeen city. Clicking on a pointer shows the sensor ID and a link labeled “More 
+        Details” which will take you to the page containing sensor details.
+        The map shows the locations of air monitoring sensor points in Aberdeen. You can zoom in by double clicking on the map interface and out by press SHIFT while double-clicking. You can also change the 
+        zoom by using the scroll wheel on most traditional mouse hardware.
+        If you click and hold your cursor on the map, you may move the held cursor to pan the map around to 
+        view more areas in the world.
+      </p>
     </div>
   </div>
 <!-- accordion-itemQ9 -->
   <div class="accordion-item">
     <h6 class="accordion-header" id="headingQ9">
       <button class="accordion-button collapsed text-dark text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#collapseQ9" aria-expanded="false" aria-controls="collapseQ9">
-        <span class="span">Q. </span>Are the sensors displayed in only Aberdeen City?     
+        <span class="span">Q. </span> What is Sensor List page?     
       </button>
     </h6>
+    <!--accordion body -->
   <div id="collapseQ9" class="accordion-collapse collapse" aria-labelledby="headingQ9" data-bs-parent="#accordion">
       <div class="accordion-body">
+        <p>
+          This page contains a list of all sensors available which allow users to access the details on individual sensors if a user do not want to use the map page, if they were unable to locate the required sensor on the live map from the previous section
+        </p>
       </div>
     </div>
   </div>
@@ -158,15 +183,76 @@
   <div class="accordion-item">
     <h6 class="accordion-header" id="headingQ10">
       <button class="accordion-button collapsed text-dark text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#collapseQ10" aria-expanded="false" aria-controls="collapseQ10">
-        <span class="span">Q. </span>Can have access to the historical data? 
+        <span class="span">Q. </span>How does the search bar works?
+
       </button>
     </h6>
+    <!--accordion body -->
   <div id="collapseQ10" class="accordion-collapse collapse" aria-labelledby="headingQ10" data-bs-parent="#accordion">
       <div class="accordion-body">
+        <P>
+        To avoid scrolling through the entire list of sensors, you can use the search bar at the top of the page, below the navigation bar, to find a sensor that you are looking for:
+        Simply select one of the details you know about the sensor from the provided list, and enter the information you are looking for, the either press the ‘ENTER’ key or click on the search button.
+
+        </P>
       </div>
     </div>
   </div>
 
+<!-- accordion-itemQ11 -->
+  <div class="accordion-item">
+    <h6 class="accordion-header" id="headingQ11">
+      <button class="accordion-button collapsed text-dark text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#collapseQ11" aria-expanded="false" aria-controls="collapseQ11">
+        <span class="span">Q. </span>What is the Comparisons page?
+        </button>
+    </h6>
+    <!--accordion body -->
+  <div id="collapseQ11" class="accordion-collapse collapse" aria-labelledby="headingQ11" data-bs-parent="#accordion">
+      <div class="accordion-body">
+        <P>
+        This page allows users to select two different sensors belonging to the same type and compare their details. It also shows both sensor’s data for a particular type of reading on a single chart, e.g. Humidity.
+        The information that is included on each sensor is listed on a provided table.
+        </P>
+      </div>
+    </div>
+  </div>
+
+
+
+<!-- accordion-itemQ12 -->
+  <div class="accordion-item">
+    <h6 class="accordion-header" id="headingQ12">
+      <button class="accordion-button collapsed text-dark text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#collapseQ12" aria-expanded="false" aria-controls="collapseQ12">
+        <span class="span">Q. </span>	How do I compare different Sensor details?
+
+
+      </button>
+    </h6>
+    <!--accordion body -->
+  <div id="collapseQ12" class="accordion-collapse collapse" aria-labelledby="headingQ12" data-bs-parent="#accordion">
+      <div class="accordion-body">
+        <P>
+        You need to note the type of air monitoring sensor and select the ID of the sensor to compare.
+        </P>
+      </div>
+    </div>
+  </div>
+<!-- accordion-itemQ13 -->
+  <div class="accordion-item">
+    <h6 class="accordion-header" id="headingQ13">
+      <button class="accordion-button collapsed text-dark text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#collapseQ13" aria-expanded="false" aria-controls="collapseQ13">
+        <span class="span">Q. </span>How do the identify the sensor type and ID on the website?
+      </button>
+    </h6>
+    <!--accordion body -->
+  <div id="collapseQ13" class="accordion-collapse collapse" aria-labelledby="headingQ13" data-bs-parent="#accordion">
+      <div class="accordion-body">
+        <P>
+        The sensor Type and ID can be seen when users check the details of a sensor or the Sensor List page.
+         </P>
+      </div>
+    </div>
+  </div>
 
 </div>
 </div>
