--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -62,12 +62,23 @@
                 <li class="nav-item">
                     <a class="nav-link text-white links" href="/comparisons" name="comparisonLink"> Comparisons </a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="nav-link text-white links" href="/FAQs" name="FAQs"> FAQs </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white links" href="/User_guide" name="User_guide"> Help </a>
-                </li>           
+                </li> 
+                -->
+                <li class="dropdown">
+                      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                       Help
+                      </a>
+                       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <li><a class="dropdown-item" href="/FAQs">FAQS</a></li>
+                        <li><a class="dropdown-item" href="/User_guide">User Guide</a></li>
+                        </ul>
+                </li>
+                          
             </ul>
         </div>
         
